# ros2_workspace

./: .gitignore
deploy/: deploy.sh
dotfiles/: .bashrc_pi.backup.20251004_050016  .gitconfig_pi  apt_packages_pi.txt  apt_packages_pi.txt.all  pip_packages_pi.txt  pip_user_packages_pi.txt  setup_dotfiles.sh
scripts/: pi_1_time_setup.sh  setup_dotfiles.sh
scripts/audio_consumer/: audio_listener.py  run_audio_listener.sh
scripts/audio_processing_node/: build_node.sh  run_audio_processing_node.sh
scripts/audio_stream_node/: build_node.sh  run_audio_stream_node.sh
scripts/cli_consumer/: run_wake_word_consumer.sh  wake_word_consumer.py
scripts/cli_publisher/: cli_publisher.py  run_cli_publisher.sh
scripts/live_agent/: build_node.sh  run_live_agent.sh  setup_complete_system.sh  test_live_agent.sh  test_tts.sh
scripts/llm_node/: build_node.sh  run_llm_node.sh
scripts/llm_node_cpp_basic/: build_node.sh  run_llm_node.sh
scripts/network/: auto_detect_network.sh  setup_macbook_network.sh  setup_pi_network.sh
scripts/network/config/: deploy_auto.sh  run_audio_stream_node_pi.sh
scripts/network/config/dds/: discovery_client_pi.xml  discovery_server_macbook.xml  run_audio_stream_node_pi.sh
scripts/wake_word_consumer_node/: build_node.sh  run_wake_word_consumer_node.sh
scripts/wake_word_node/: build_node.sh  run_wake_word_node.sh
src/audio_msgs/: CMakeLists.txt  package.xml
src/audio_msgs/msg/: Audio.msg
src/audio_processing_node/: package.xml  requirements.txt  setup.py
src/audio_processing_node/audio_processing_node/: audio_processing_node.py
src/audio_stream_node/: package.xml  requirements.txt  setup.py
src/audio_stream_node/audio_stream_node/: audio_stream_node.py
src/live_agent/: README.md  package.xml  requirements.txt  setup.py
src/live_agent/config/: agent.yaml  topics.yaml
src/live_agent/examples/: ros2_deepagents_integration.py  ui_config.env
src/live_agent/launch/: live_agent.launch.py
src/live_agent/live_agent/: __init__.py  led_controller.py  live_agent.py
src/llm_node/: README.md  package.xml  requirements.txt  setup.py
src/llm_node/launch/: llm_node.launch.py
src/llm_node/llm_node/: llm_node.py
src/llm_node/resource/: llm_node
src/llm_node_cpp_basic/: .gitignore  CMakeLists.txt  README.md  package.xml
src/llm_node_cpp_basic/src/: llm_node.cpp
src/wake_word_consumer_node/: package.xml  setup.py
src/wake_word_consumer_node/wake_word_consumer_node/: wake_word_consumer_node.py
src/wake_word_node/: package.xml  requirements.txt  setup.py
src/wake_word_node/resource/: wake_word_node
src/wake_word_node/wake_word_node/: __init__.py  wake_word_node.py
